# advent_2024

./: Cargo.toml
src/: main.rs
src/solutions/: createday.py  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  template.rs
